--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
+    "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.5.2",
     "open-browser-webpack-plugin": "0.0.4",
     "react": "^15.4.2",
@@ -29,6 +30,7 @@
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
+    "vue": "^2.3.2",
     "webpack": "^2.2.1",
     "webpack-zepto": "0.0.1",
     "zepto": "^1.2.0"
